--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "browser-sync": "^2.26.3",
     "concurrently": "^4.0.1",
     "typescript": "^3.1.3"
+  },
+  "dependencies": {
+    "@types/node": "^10.12.1"
   }
 }
