--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "devDependencies": {
     "browser-sync": "^2.26.3",
     "concurrently": "^4.0.1",
-    "typescript": "^3.1.3"
+    "typescript": "^3.1.3",
+    "@types/node": "^10.12.1"
   },
   "dependencies": {
-    "@types/node": "^10.12.1"
   }
 }
