--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "typescript": "^3.1.3"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc app.ts",
     "start": "concurrently \"tsc --watch app.ts\" \"browser-sync start --server --watch --files 'index.html' 'app.js'\""
   },
   "repository": {
