--- a/package.json
+++ b/package.json
@@ -8,21 +8,13 @@
     "@types/node": "^10.12.1",
     "browser-sync": "^2.26.3",
     "concurrently": "^4.0.1",
-    "eslint": "^5.8.0",
+    "tslint": "^5.11.0",
     "typescript": "^3.1.3"
   },
   "scripts": {
     "build": "tsc app.ts",
     "start": "concurrently \"tsc --watch app.ts\" \"browser-sync start --server --watch --files 'index.html' 'app.js'\""
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/htl-perg-2018-19-4ahif/game-of-life-exercise-not-matthias.git"
-  },
   "author": "",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/htl-perg-2018-19-4ahif/game-of-life-exercise-not-matthias/issues"
-  },
-  "homepage": "https://github.com/htl-perg-2018-19-4ahif/game-of-life-exercise-not-matthias#readme"
+  "license": "MIT"
 }
