--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "typescript": "^3.1.3"
   },
   "scripts": {
+    "lint": "tslint --config tslint.json *.ts",
     "build": "tsc app.ts",
     "start": "concurrently \"tsc --watch app.ts\" \"browser-sync start --server --watch --files 'index.html' 'app.js'\""
   },
